Fixed share button spacing

--- a/assets/sass/_post.scss
+++ b/assets/sass/_post.scss
@@ -45,7 +45,7 @@
   &:last-child { margin-bottom: 0; }
 }
 
-.post-footer { margin-top: 5px; }
+.post-footer { margin: 0 0 1em 0; }
 
 .post-tags,
 .share {
